--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@vercel/analytics": "^1.1.1"
+	}
 }
